# racefuel

./: .env.example  .firebaserc  .gitignore  Dockerfile  README.md  cloudbuild.yaml  firebase.json  firestore.rules  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  deploy.yml
data/: nutrition-overrides.json
docs/: Loop_nutrition.gpx  architecture.md  improvement-plan.md  projectdetails.md
docs/AutoGen/: fuelcue_algorithm_matrix (1).xlsx  fuelcue_algorithm_spec (1).md
docs/CI/: CI.md
functions/: package-lock.json  package.json  tsconfig.json
functions/src/: index.ts
public/: products-feed.xml
scripts/: generate-products.mjs  generate-xml-feed.mjs  mobile-audit.mjs  mobile-test.mjs  prod-test.mjs
server/flyover/: .gcloudignore  Dockerfile  README.md  pyproject.toml
server/flyover/app/: auth.py  firestore_io.py  main.py  render.py  storage.py
server/flyover/renderer/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
server/flyover/renderer/src/: animation.ts  geometry.ts  main.ts  types.ts
src/: App.tsx  index.css  index.tsx  vite-env.d.ts
src/components/: ActionBar.tsx  AuthScreen.tsx  AutoGenProgress.tsx  AutoGenerateButton.tsx  BundlePicker.tsx  CartModal.tsx  CustomProductModal.tsx  DateEditor.tsx  EarlyAccessModal.tsx  EditProfileModal.tsx  EditableStatRow.tsx  EffortEditor.tsx  ErrorBoundary.tsx  EstimatedTimeEditor.tsx  EventSearchModal.tsx  FeedbackModal.tsx  FlavourPicker.tsx  GpxDropZone.tsx  HistoryView.tsx  LandingPage.tsx  (+23 more)
(+56 files in other folders)
